15-0 basic search and pagination

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -20,6 +20,8 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/notifications";
 @import "components/apprenticeship-service-header";
 @import "components/accessible-autocomplete";
+@import "components/search";
+@import "components/pagination";
 
 //
 //Home page
