--- a/app/views/15-0/reserve-choose-training.html
+++ b/app/views/15-0/reserve-choose-training.html
@@ -85,13 +85,17 @@
                     </span>
                     {% endif %}
                     <div class="govuk-radios" id="whichTrainingStartDateAnswer">
+                        {% set _index = 1 %}
                         {% for startDate in myData.startDates %}
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="whichTrainingStartDate-{{loop.index}}" name="whichTrainingStartDateAnswer" type="radio" value="{{startDate.id}}" {% if myData.whichTrainingStartDateAnswerTemp == startDate.id %}checked{% endif %}>
-                            <label class="govuk-label govuk-radios__label" for="whichTrainingStartDate-{{loop.index}}">
-                                {{startDate.name}}
-                            </label>
-                        </div>
+                          {% if startDate.promvs == true %}
+                            <div class="govuk-radios__item">
+                                <input class="govuk-radios__input" id="whichTrainingStartDate-{{_index}}" name="whichTrainingStartDateAnswer" type="radio" value="{{startDate.id}}" {% if myData.whichTrainingStartDateAnswerTemp == startDate.id %}checked{% endif %}>
+                                <label class="govuk-label govuk-radios__label" for="whichTrainingStartDate-{{_index}}">
+                                    {{startDate.name}}
+                                </label>
+                            </div>
+                            {% set _index = _index + 1 %}
+                          {% endif %}
                         {% endfor %}
                     </div>
                 </fieldset>
