15-0 hid paging for UR

--- a/app/views/15-0/reserve-reservations-pro.html
+++ b/app/views/15-0/reserve-reservations-pro.html
@@ -206,7 +206,7 @@
 {% endif %}
 
 {% if _reservationsTotal > 50 %}
-<div class="govuk-grid-row">
+<!-- <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <nav role="navigation" aria-label="Pagination">
         <p class="pagination__summary">Showing 101 &ndash; 150 of 747 reservations</p>
@@ -221,7 +221,7 @@
         </ul>
       </nav>
   </div>
-</div>
+</div> -->
 {% endif %}
 
 {% if _reservationsTotal == 0 %}
