--- a/app/views/15-0/reserve-choose-org-pro.html
+++ b/app/views/15-0/reserve-choose-org-pro.html
@@ -49,7 +49,7 @@
                   <td class="govuk-table__cell">{{_employer.name|upper}}</td>
                   <td class="govuk-table__cell">{{_employer.id}}</td>
                   <td class="govuk-table__cell govuk-table__cell--numeric" >
-                    <a href="reserve-confirm-org?type=pro&employer={{_employer.id}}" class="govuk-link">Select</a>
+                    <a href="reserve-confirm-org?employer={{_employer.id}}" class="govuk-link">Select</a>
                   </td>
                 </tr>
               {% endfor %}
